Remove old submodules and add stream FlashDepth submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@github.com:DepthAnything/Depth-Anything-V2.git
 [submodule "submodule/Flashdepth"]
 	path = submodule/Flashdepth
-	url = git@github.com:Eyeline-Research/FlashDepth.git
+	url = git@github.com:ZetaJ7/FlashDepth.git
